syntax = "proto3";

package com.spectrum.crimson.proto;

option java_multiple_files = true;
option java_package = "com.spectrum.crimson.proto";
option java_outer_classname = "DtoProto";

message Token {
  string access_token = 1;
  string refresh_token = 2;
}