syntax = "proto3";

import "dto.proto";

package com.spectrum.crimson.proto.item_group;

option java_multiple_files = true;
option java_package = "com.spectrum.crimson.proto.item_group";
option java_outer_classname = "ItemGroupProto";

message ItemGroupCreateRequest {
  enum Status {
    UNKNOWN = 0;
    PUBLIC = 1;
    PRIVATE = 2;
  }
  string name = 1;
  Status status = 2;
  string description = 3;
}

message ItemGroupCreateResponse {
  string id = 1;
}